force-app/main/default/objects/Pedido_de_gas__c/Pedido_de_gas__c.object-meta.xml
<CustomObject>
    <description>Pedidos de gas relacionados con la dirección de entrega</description>
    <label>Pedido de gas</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Pedido de gas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos de gas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>