force-app/main/default/objects/Pedido_de_gas__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <label>Comentarios</label>
    <length>200</length>
    <type>Text</type>
</CustomField>