force-app/main/default/objects/Pedido_de_gas__c/fields/Direccion_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Direccion_de_entrega__c</fullName>
    <label>Dirección de entrega</label>
    <referenceTo>Direcci_n_de_entrega__c</referenceTo>
    <relationshipLabel>Pedidos de gas</relationshipLabel>
    <relationshipName>Pedidos_de_gas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>