force-app/main/default/objects/Pedido_de_gas__c/fields/Nivel_del_deposito__c.field-meta.xml
<CustomField>
    <fullName>Nivel_del_deposito__c</fullName>
    <label>Nivel del depósito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>