force-app/main/default/objects/Pedido_de_gas__c/validationRules/Rango_nivel_de_deposito.validationRule-meta.xml
<ValidationRule>
    <fullName>Rango_nivel_de_deposito</fullName>
    <active>true</active>
    <description>Limita el nivel de depósito que se puede introducir de 0-85</description>
    <errorConditionFormula>OR( Nivel_del_deposito__c &lt; 0, Nivel_del_deposito__c &gt; 85)</errorConditionFormula>
    <errorDisplayField>Nivel_del_deposito__c</errorDisplayField>
    <errorMessage>El nivel del depósito debe estar entre 0 y 85</errorMessage>
</ValidationRule>