force-app/main/default/objects/Pedido_de_gas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Nivel_del_deposito__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Comentarios__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/5/2022 12:00 AM</value>
    </filters>
    <label>PEDIDOS</label>
    <language>es</language>
</ListView>